data/Java/08-bad-invocation/5/[M]Error.txt
*https://www.tutorialspoint.com/java/java_methods.htm
[E]This_Example.java:33: error: cannot find symbol
      int ret = this.greet;
                    ^